--- a/startup-landing-page-clone/index.html
+++ b/startup-landing-page-clone/index.html
@@ -5,10 +5,21 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 	<nav class="top-navigation">
-		<div class="content"></div>
+		<div class="content">
+			<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+			<ul class="links">
+				<li>Meet Karma</li>
+				<li>How It Works</li>
+				<li>Store</li>
+				<li>Blog</li>
+				<li>Help</li>
+				<li>Log in</li>
+			</ul>
+		</div>
 	</nav>
-	
 </body>
+
 </html>
