--- a/startup-landing-page-clone/index.html
+++ b/startup-landing-page-clone/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<nav class="top-navigation">
 		<div class="content">
 			<ul class="links">
@@ -19,10 +20,16 @@
 				<li>Log in</li>
 			</ul>
 			<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px" style="height:70px;">
-
 		</div>
 	</nav>
 	<section class="introduction" style="height: 620px">
+		<div class="content">
+			<h1>Introducing Karma</h1>
+			<h3>Bring WiFi with you, everywhere you go.</h3>
+			<div class="buttons">
+				<button>Learn More</button>
+			</div>
+		</div>
 	</section>
 </body>
 
