--- a/startup-landing-page-clone/index.html
+++ b/startup-landing-page-clone/index.html
@@ -31,6 +31,27 @@
 			</div>
 		</div>
 	</section>
+	<section class="cases">
+		<div class="content">
+			<h2>Everyone needs a little Karma</h2>
+			<ul class="devices">
+		 		<li>
+		 			<img width="127px" height"127px" src="images/icon-devices.svg">
+		 			<div class="caption">
+		 				<h3>Internet for all devices</h3>
+		 			</div>
+		 		</li>
+		  		<li>
+		  			<img width="127px" height="127px" src="images/icon-coffee.svg" > 
+		  				<h3>Boost your Productivity</h3>
+		  		</li>
+		  		<li>
+		  			<img width="127px" height="127px" src="images/icon-refill.svg">
+		  				<h3>Pay as you go</h3>
+		  		</li>
+			</ul>
+		</div>
+	</section>
 </body>
 
 </html>
