--- a/startup-landing-page-clone/index.html
+++ b/startup-landing-page-clone/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -52,6 +53,14 @@
 			</ul>
 		</div>
 	</section>
+	<footer class="social">
+		<div class="content">
+
+			<hr>
+			<h5>Join us on</h5>
+
+		</div>
+	</footer>
 </body>
 
 </html>
