--- a/startup-landing-page-clone/index.html
+++ b/startup-landing-page-clone/index.html
@@ -5,7 +5,8 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -58,6 +59,17 @@
 
 			<hr>
 			<h5>Join us on</h5>
+			<ul class="icons">
+				<li>
+					<i class="fa fa-twitter"></i>
+				</li>
+				<li>
+					<i class="fa fa-facebook"></i>
+				</li>
+				<li>
+					<i class="fa fa-instagram"></i>
+				</li>
+			</ul>
 
 		</div>
 	</footer>
