--- a/startup-landing-page-clone/index.html
+++ b/startup-landing-page-clone/index.html
@@ -5,8 +5,8 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
-	<link href="css/font-awesome.min.css" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> 
+	<!-- 	<link href="css/font-awesome.min.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -62,12 +62,15 @@
 			<ul class="icons">
 				<li>
 					<i class="fa fa-twitter"></i>
+						twitter
 				</li>
 				<li>
 					<i class="fa fa-facebook"></i>
+						facebook
 				</li>
 				<li>
 					<i class="fa fa-instagram"></i>
+						IG
 				</li>
 			</ul>
 
