--- a/shopping-list/index.html
+++ b/shopping-list/index.html
@@ -25,8 +25,8 @@
 			<li class="active-item"> 
 				<i class="fa fa-square-o"></i>
 				test2 
-			</li class="active-item">
-			<li>
+			</li>
+			<li class="active-item">
 				<i class="fa fa-square-o"></i> 
 				test3 
 			</li>
