added some polishing by renaming the getText() and clearing the container before launching fizzbuzz

--- a/fizzbuzz/refactor.html
+++ b/fizzbuzz/refactor.html
@@ -7,17 +7,18 @@
 <body>
 	
 	FIZZBUZZ APP 
-	<br>
-	<br>
+	<br/>
+	<br/>
 
 	<script type="text/javascript" src="js/fizzbuzz-refactor.js"></script>
 
- 	<form name="myForm" onsubmit="return getText()">
-		Enter Number: <input type="text" id="number">
-		<input type="submit">	
- 	</form>	
- 	<br>
-	<br>
-
+ 	<form name="myForm" onsubmit="launchFizzBuzz();return false;">
+		Enter Number: <input type="text" id="number"/>
+		<input type="submit"/>
+ 	</form>
+ 	<br/>
+	<br/>
+	<div id="fizzBuzzContainer">
+	</div>
 </body>
 </html>
